# Initialize AC: ACINIT
AC_INIT([spam_Filter], [2.69])
# initialize automake
AM_INIT_AUTOMAKE

# AM stands for automake and AC stands for autoconf
AC_PROG_RANLIB
# check for c++ compiler
AC_LANG(C++)
#sets C++ compiler
AC_PROG_CXX

AC_CONFIG_FILES([Makefile, build/Makefile src/Makefile])

AC_OUTPUT
